# btc_script_interpreter

./: Cargo.toml
src/: interpret.rs  main.rs  opcodes.rs  parse.rs  script.rs
