[package]
name = "btc_script_interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
hex = "0.4.3"
bitcoin_hashes = "0.10.0"
tabled = "0.7.0"
colored = "2.0.0"
rand = "0.8.5"
term_size = "0.3.2"